# EIS-Analysis-Pipeline

./: .gitignore  AUDIT_REPORT.md  CLAUDE.md  README.md  ROADMAP.md  analyze_one.py  eis_analysis.aux  eis_analysis.html  eis_analysis.out  eis_pipeline.py  pyproject.toml
26.5.8/: GPE_h3_101.mps  GPE_h3_101_2.mps  GPE_h3_101_2_C01.mpr  GPE_h3_101_2__D128_C01.sta  GPE_h3_101_C02.mpr  GPE_h3_101__D128_C02.sta  GPE_h3_131.mps  GPE_h3_131_C01.mgr  GPE_h3_131_C01.mpr  GPE_h3_131_C01.txt  GPE_h3_131__D128_C01.sta  GPE_h4_201.mps  GPE_h4_201_C01.mpr  GPE_h4_201__D128_C01.sta  SPE_3h_131.mps  SPE_3h_131_C01.mpr  SPE_3h_131__D128_C01.sta  readme.txt
26.5.8/activity_energy/: GPE_h3_131_40_C01.mgr  GPE_h4_201_80_C01.mgr  SPE_3h_131_40_C01.mgr  readme.txt
26.5.8/活化能/: GPE_h3_101_40.mps  GPE_h3_101_40_C01.mgr  GPE_h3_101_40_C01.mpr  GPE_h3_101__D128_C01.sta  GPE_h3_131_40.mps  GPE_h4_201_40.mps  (+18 more)
eis_pipeline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
eislib/: __init__.py  data.py  derive.py  fit.py  html_single.py  kk.py  plot.py  quality.py
figures/: bode_interactive.html  combined_interactive.html  dashboard_bode.html  dashboard_harmonics.html  dashboard_nyquist.html  nyquist_interactive.html
lessons/: README.md  lesson-01-data-driven-guesses.md  lesson-02-multi-model-selection.md  lesson-03-zero-crossing-not-Rb.md  lesson-04-100mv-nonlinearity.md  lesson-05-plotly-patterns.md  lesson-06-quality-flags.md  lesson-07-temperature-effects.md  lesson-08-cable-dominated.md  lesson-09-ideal-cap-vs-cpe.md  lesson-09-interactive-report-bugs.md
